adding component information in tabs

--- a/src/app/Components/steps-user-information/steps-user-information.component.html
+++ b/src/app/Components/steps-user-information/steps-user-information.component.html
@@ -1,5 +1,11 @@
-<mat-tab-group>
-    <mat-tab label="First"> Content 1 </mat-tab>
-    <mat-tab label="Second"> Content 2 </mat-tab>
-    <mat-tab label="Third"> Content 3 </mat-tab>
+<mat-tab-group mat-align-tabs="center">
+    <mat-tab label="User Information">
+        <app-user-information></app-user-information>
+    </mat-tab>
+    <mat-tab label="Country Information">
+        <app-country-information></app-country-information>
+    </mat-tab>
+    <mat-tab label="Jobs Information">
+        <app-jobs-information></app-jobs-information>
+    </mat-tab>
 </mat-tab-group>
