--- a/src/app/Components/steps-user-information/user-information/user-information.component.html
+++ b/src/app/Components/steps-user-information/user-information/user-information.component.html
@@ -1,1 +1,19 @@
-<form [formGroup]="form"></form>
+<div class="container mt-4">
+    <form [formGroup]="form">
+        <mat-form-field class="example-full-width mx-3" appearance="fill">
+            <mat-label>Name</mat-label>
+            <input matInput placeholder=" " formControlName="name">
+        </mat-form-field>
+        <mat-form-field class="example-full-width mx-3" appearance="fill">
+            <mat-label>Last Name</mat-label>
+            <input matInput placeholder=" " formControlName="lastName">
+        </mat-form-field>
+        <mat-form-field class="example-full-width mx-3" appearance="fill">
+            <mat-label>Phone Number</mat-label>
+            <input matInput type="number" formControlName="phoneNumber">
+        </mat-form-field>
+    </form>
+</div>
+
+
+<button (click)="test()">test</button>
