--- a/src/app/Components/steps-user-information/user-information/user-information.component.html
+++ b/src/app/Components/steps-user-information/user-information/user-information.component.html
@@ -12,5 +12,9 @@
             <mat-label>Phone Number</mat-label>
             <input matInput type="number" formControlName="phoneNumber">
         </mat-form-field>
+        <mat-form-field class="example-full-width mx-3" appearance="fill">
+            <mat-label>NationalCode</mat-label>
+            <input matInput type="number" formControlName="nationalCode">
+        </mat-form-field>
     </form>
 </div>
