--- a/src/app/Components/steps-user-information/user-information/user-information.component.html
+++ b/src/app/Components/steps-user-information/user-information/user-information.component.html
@@ -19,12 +19,12 @@
             </mat-form-field>
         </div>
         <div class="d-flex align-items-center justify-content-center">
-            <mat-radio-group class="example-full-width mx-3 w-25" appearance="fill" aria-label="Select an option">
+            <mat-radio-group class="example-full-width mx-3 w-25" formControlName="gender" appearance="fill" aria-label="Select an option">
                 <div class="d-flex flex-column">
                     <mat-label class="mb-3">Gender</mat-label>
                     <div class="d-flex align-items-center">
-                        <mat-radio-button class="mx-2" formControlName="gender" value="mail">Mail</mat-radio-button>
-                        <mat-radio-button class="mx-2" formControlName="gender" value="femail">Femail</mat-radio-button>
+                        <mat-radio-button class="mx-2" value="mail">Mail</mat-radio-button>
+                        <mat-radio-button class="mx-2" value="femail">Femail</mat-radio-button>
                     </div>
                 </div>
             </mat-radio-group>
