--- a/src/app/Components/steps-user-information/jobs-information/jobs-information.component.html
+++ b/src/app/Components/steps-user-information/jobs-information/jobs-information.component.html
@@ -32,8 +32,8 @@
             <div class="row w-100">
                 <div class="col-6 d-flex justify-content-center align-items-center">
                     <mat-form-field class="w-75" appearance="fill">
-                        <mat-label>Description</mat-label>
-                        <textarea formControlName="description" matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1"
+                        <mat-label>DescriptionJob</mat-label>
+                        <textarea formControlName="descriptionJob" matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1"
                             cdkAutosizeMaxRows="5"></textarea>
                     </mat-form-field>
                 </div>
